examples/test/testpolicy289.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy289
  namespace: namespace234
spec:
  podSelector:
    matchLabels:
      key6: value40
      key39: value5
      key32: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value1
      podSelector:
        matchLabels:
          key25: value44
          key27: value37
          key30: value45
